2005-03/31(jol):
	- Fix a dirty bug inside the get_data of the egxp_message
	- Fix a bug in the roster, in fact, all contacts were referenced by their
	  name instead of their jid.
	- It seems to have no memory leak
	
2005-03-30(jol):
	- fix a bug in the xmpp_jid code,
	- the bug hunting progress ...
	
2005-03-22(jol):
	- Now all contacts and group are stored in memory,
	- Minor add inside xmpp_jid.
	
2005-03-21(jol):
	- Add egxp_node_print to display the defined protocol,
	- Add egxp_display to show all information to the egxp structure,
	- Now, it's forbidden to add condition to a node if the node is already registered to its parent,
	- Code refactoring, use of xmpp_opcode_iq in xmpp_opcode_init and xmpp_im_opcode_init,
	- Continue to work on the XmppIM -> make some stuff to fill the roster.

2005-03-19(jol):
	- Continue to work on the XmppIM -> make some stuff to fill the roster
	- Add xmpp_im_callback and xmpp_im_opcode files
	- Update some API documentation
	- Update xmpp-im test file

2005-03-13(jol):
	- XmppIM protocole can be now registered/allocated/...
	

2005-03-06(jol):
	- Add xmpp_presence file that provides function to send notification message.
	- Add some opcode support.
	- Some test around the gui.
	
2005-03-03(jol):
	- Add a begin to the interface (only a transparent background with its container).
	- Its just a first look at the evas and esmart api.
	- Update configure.ac to check for evas, esmart abd edje.
	- Fix a problem inside the xmpp_im_contact_remove_all_group.
	- Add xmpp_jid_get_bar and xmpp_jid_get_full.
	- Add GPL license within some files.
	
2005-02-28(jol):
	- Just a first implementation of the Roster, Group and Contact
	- Give an test example to check memory leak and the behavior of the new code
	
2005-02-24(jol):
	- Fix the bug ! The message was not correctly remove from the child list
	of a message. The reason is that i didn't use correctly the ecore_list functions.
	- Add some helpful functions.