@@ -1,2 +1,2 @@
-SUBDIRS=src doc
+SUBDIRS=data src doc
 EXTRA_DIST=autogen.sh m4
