@@ -1,0 +1,45 @@
+program {
+  name :   "base.bg.close";
+  signal : "base,close";
+  source : "*";
+  action : STATE_SET "close" 0.0;
+  transition : ACCELERATE 1.0;
+  //target : "base.plus.clip";
+  //target : "base.minus.clip";
+  target : "base.bg";
+}
+
+program {
+  name :   "base.bg.open";
+  signal : "base,open";
+  source : "*";
+  action : STATE_SET "default" 0.0;
+  transition : ACCELERATE 1.0;
+  //target : "base.plus.clip";
+  // target : "base.minus.clip";
+  target : "base.bg";
+}
+
+program {
+  name :   "base.plusminus.open";
+  signal : "base,open";
+  source : "*";
+  action : STATE_SET "default" 0.0;
+  target : "base.plus.clip";
+  target : "base.minus.clip";
+  //target : "base.bg";
+}
+
+program {
+  name :   "base.plusminus.close";
+  signal : "base,close";
+  source : "*";
+  action : STATE_SET "close" 0.0;
+  target : "base.plus.clip";
+  target : "base.minus.clip";
+}
+
+
+// base.minus --> base, close
+BUTTON_PROG("base.minus", "", "base,close");
+BUTTON_PROG("base.plus", "", "base,open");
