@@ -1,4 +1,12 @@
-2005-03/31(jol):
+2005-04-14(jol):
+	- Currently, i learn edje in order to create the eim graphical
+	  interface with it. Edje is really great and really powerful even 
+	  if i know only a little part of it. All the stuff is inside
+	  the data directory. More precisely, you can go inside the 
+	  data/themes/default and run the "make preview" command to see
+	  the gui. If you want to work on it your are welcome. So the 
+	  project is not dead, i work on it even if i'm busy.
+2005-03-31(jol):
 	- Fix a dirty bug inside the get_data of the egxp_message
 	- Fix a bug in the roster, in fact, all contacts were referenced by their
 	  name instead of their jid.
